добиавил последнюю страницу, сделал php разметку

--- a/src/sass/blocks/_portfolio.sass
+++ b/src/sass/blocks/_portfolio.sass
@@ -1,5 +1,5 @@
 .portfolio
-  padding-top: 100px
+  padding-top: 80px
   padding-bottom: 86px
   background-color: #f3f3f3
   &-title
@@ -37,6 +37,8 @@
     letter-spacing: 0.35px
 .button-velas
   padding: 9px 54px
+  & a 
+    color: #fff
 .button-irrida
   padding: 9px 31px 9px 38px
 .button-purrino
@@ -50,6 +52,8 @@
   margin-top: 40px
   padding: 12px 55px
   background-color: $green-button
+  & a
+    color: #fff
 @media (max-width: 1200px)
   .portfolio
     padding-top: 50px
