--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -28,5 +28,10 @@
 @import "blocks/modalone"
 /* стили для модального окна вызова замерщика меню */
 @import "blocks/modaltwo"
+/* стили для окна об успешной отправки формы */
+@import "blocks/popup"
 /* стили для карточки с товаром */
 @import "blocks/item"
+/*стили  страницы коталога */
+@import "blocks/cotalog"
+
