--- a/src/css/style.css
+++ b/src/css/style.css
@@ -377,8 +377,6 @@ a.navbar__navigation-active:hover::after {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
 .button-warning__navbar {
@@ -957,6 +955,10 @@ ul.cotalog-list li p {
   height: 768px;
 }
 
+img.slider__img {
+  height: 765px;
+}
+
 .slider__dots img {
   position: relative;
   width: 116px;
@@ -977,8 +979,8 @@ ul.cotalog-list li p {
 }
 
 .slider__dots {
-  left: 690px;
-  bottom: 65px;
+  left: 700px;
+  bottom: 100px;
   max-width: 100%;
 }
 
@@ -995,9 +997,9 @@ ul.cotalog-list li p {
 .button__header, .button__header3, .button__header2 {
   position: absolute;
   left: 350px;
-  bottom: 10px;
+  bottom: 50px;
   background-color: #7dad4b;
-  padding: 35px 110px 35px 30px;
+  padding: 35px 128px 35px 30px;
 }
 
 .button__header h6, .button__header3 h6, .button__header2 h6 {
@@ -1028,40 +1030,46 @@ ul.cotalog-list li p {
 
 @media (max-width: 1400px) {
   .button__header {
-    left: 250px;
-    padding: 15px 60px 15px 10px;
+    left: 200px;
+    bottom: 50px;
+    padding: 35px 128px 35px 30px;
   }
   .slider__dots {
     left: 560px;
-    bottom: 50px;
-  }
-  .slider__dots img {
-    width: 60px;
-    height: 60px;
-  }
-  .slider__dots li {
-    width: 100px;
+    bottom: 100px;
   }
 }
 
 @media (max-width: 1350px) {
   .button__header {
-    left: 150px;
-    padding: 10px;
+    left: 120px;
   }
   .button__header h6 span {
     font-size: 22px;
   }
   .slider__dots {
-    left: 370px;
-    bottom: 40px;
+    left: 490px;
+    bottom: 100px;
+  }
+}
+
+@media (max-width: 1150px) {
+  .button__header {
+    left: 140px;
+    bottom: 75px;
+    padding: 19px 20px;
+  }
+  .slider__dots {
+    left: 380px;
+    bottom: 110px;
   }
   .slider__dots img {
-    width: 50px;
-    height: 50px;
+    height: 90px;
+    width: 90px;
   }
   .slider__dots li {
-    width: 100px;
+    width: 128px;
+    /* width: 130px */
   }
 }
 
@@ -1071,6 +1079,7 @@ ul.cotalog-list li p {
   }
   .button__header {
     left: 100px;
+    bottom: 10px;
     padding: 10px 20px;
   }
   .button__header h6, .button__header span {
@@ -1132,7 +1141,7 @@ ul.cotalog-list li p {
 
 /* Стили для блока с новинками */
 .portfolio {
-  padding-top: 100px;
+  padding-top: 80px;
   padding-bottom: 86px;
   background-color: #f3f3f3;
 }
@@ -1190,6 +1199,10 @@ ul.cotalog-list li p {
   padding: 9px 54px;
 }
 
+.button-velas a {
+  color: #fff;
+}
+
 .button-irrida {
   padding: 9px 31px 9px 38px;
 }
@@ -1208,6 +1221,10 @@ ul.cotalog-list li p {
   margin-top: 40px;
   padding: 12px 55px;
   background-color: #7dad4b;
+}
+
+.portfolio-full__button a {
+  color: #fff;
 }
 
 @media (max-width: 1200px) {
@@ -2601,7 +2618,7 @@ ul.cotalog-list li p {
   display: none;
   left: 0;
   top: 0;
-  z-index: 9998;
+  z-index: 9000;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -2765,7 +2782,7 @@ ul.cotalog-list li p {
   display: none;
   left: 0;
   top: 0;
-  z-index: 9998;
+  z-index: 9000;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -2903,6 +2920,70 @@ ul.cotalog-list li p {
   .modal-invite__title {
     font-size: 24px;
   }
+}
+
+/* стили для окна об успешной отправки формы */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 9999;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.popup__active {
+  position: relative;
+  padding: 20px 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #fff;
+  border-radius: 52px;
+  border-top: 8px solid #ee8b15;
+  border-bottom: 8px solid #63564f;
+}
+
+.popup__active img {
+  margin-top: 15px;
+}
+
+.popup__active h6 {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.popup__close {
+  position: absolute;
+  right: 5px;
+  top: 40%;
+  border: none;
+  background-color: #fff;
+  color: #63564f;
+  font-size: 20px;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.popup__close:hover {
+  color: #ee8b15;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 /* стили для карточки с товаром */
@@ -3326,7 +3407,7 @@ img.myPrev {
   height: 20px;
   left: 30px;
   top: -380px;
-  z-index: 88;
+  z-index: 10;
 }
 
 img.myPrev:hover {
@@ -3339,7 +3420,7 @@ img.myNext {
   top: -380px;
   width: 12px;
   height: 20px;
-  z-index: 9999;
+  z-index: 10;
 }
 
 img.myNext:hover {
@@ -3505,6 +3586,8 @@ img.myNext:hover {
     padding-left: 70px;
   }
   .menu__items li {
+    padding-left: 0;
+    min-height: 50px;
     text-align: center;
     padding: 0;
     -webkit-transition: 0.2s;
@@ -3526,6 +3609,13 @@ img.myNext:hover {
 }
 
 @media (max-width: 570px) {
+  img.card__image {
+    width: 99%;
+  }
+  .item-card {
+    display: block;
+    margin: auto;
+  }
   .img.card__image {
     width: 80%;
   }
@@ -3553,4 +3643,203 @@ img.myNext:hover {
 }
 
 /* настройки выапдающего меню - каталог товаров  < 992px*/
+/*стили  страницы коталога */
+.item-catalog {
+  max-width: 307px;
+}
+
+.cotalog {
+  background-color: #fafafa;
+}
+
+.cotalog-kinds {
+  padding-top: 40px;
+}
+
+.cotalog-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.cotalog-wrapper__tagitems {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.cotalog__title {
+  margin-left: 30px;
+  color: #1f1f1f;
+  color: #000000;
+  font-family: Roboto;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: #1f1f1f;
+  letter-spacing: 0.56px;
+}
+
+.cotalog__counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.cotalog-amount {
+  padding-top: 25px;
+  padding-bottom: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.cotalog-minus {
+  margin-right: 5px;
+  width: 36px;
+  height: 39px;
+  border: 1px solid #e0e0e0;
+  background-color: #ffffff;
+  background-color: #f8f8f8;
+}
+
+.cotalog-plus {
+  width: 36px;
+  height: 39px;
+  border: 1px solid #e0e0e0;
+  background-color: #ffffff;
+  background-color: #f8f8f8;
+}
+
+.cotalog-number {
+  margin-right: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid #e0e0e0;
+  width: 59px;
+  height: 39px;
+  color: #000000;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 0.28px;
+}
+
+.cotalog__button {
+  cursor: pointer;
+  display: block;
+  margin: auto;
+  width: 233px;
+  height: 46px;
+  border: 2px solid #ee8b15;
+  background-color: #fff;
+  color: #ee8b15;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 25.05px;
+}
+
+.cotalog__button a {
+  color: #ee8b15;
+}
+
+.cotalog-card_list {
+  position: relative;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  width: 284px;
+  height: 396px;
+  background-color: #ffffff;
+}
+
+.cotalog-card__item {
+  position: absolute;
+  background-color: #ffffff;
+  width: 284px;
+  height: 396px;
+  overflow: hidden;
+}
+
+.cotalog-wrapper__tags {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  padding-left: 10px;
+  margin-bottom: 70px;
+}
+
+.cotalog-wrapper__tag {
+  margin-right: 10px;
+  cursor: pointer;
+  border-radius: 13px;
+  border: 1px solid #ececec;
+  background-color: #ffffff;
+  width: 110px;
+  height: 25px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  z-index: 99;
+}
+
+.cotalog-wrapper__name {
+  margin-top: 48px;
+  padding-left: 55px;
+  display: -webkit-inline-box;
+  color: #000000;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+}
+
+.activety {
+  cursor: pointer;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: #3a3a3a;
+  width: 110px;
+  height: 25px;
+  border-radius: 13px;
+  background-color: #7dad4b;
+  text-align: center;
+}
+
+@media (max-width: 991px) {
+  .cotalog__title {
+    text-align: center;
+    font-size: 18px;
+  }
+  .cotalog-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .cotalog-wrapper__tags {
+    display: inline-table;
+  }
+  .cotalog-wrapper__name {
+    padding-left: 25px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
