--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -8,6 +8,8 @@
 .draggable 
   max-width: 100vw
   height: 768px
+img.slider__img
+  height: 765px
 .slider__dots img 
   position: relative
   width: 116px
@@ -20,8 +22,8 @@
   filter: brightness(100%)
   object-fit: cover
 .slider__dots 
-  left: 690px
-  bottom: 65px 
+  left: 700px
+  bottom: 100px 
   max-width: 100%
 .slick-dots li 
   width: 150px
@@ -32,9 +34,9 @@
 .button__header, .button__header3, .button__header2
   position: absolute
   left: 350px
-  bottom: 10px
+  bottom: 50px
   background-color: $green-button
-  padding: 35px 110px 35px 30px
+  padding: 35px 128px 35px 30px
   & h6
     font-size: 25px
     font-weight: 700
@@ -55,35 +57,40 @@
     left: 560px
 @media (max-width: 1400px)
   .button__header
-    left: 250px
-    padding: 15px 60px 15px 10px
+    left: 200px
+    bottom: 50px
+    padding: 35px 128px 35px 30px
   .slider__dots 
     left: 560px
-    bottom: 50px
-    & img 
-      width: 60px 
-      height: 60px
-    & li
-      width: 100px
+    bottom: 100px
 @media (max-width: 1350px)
   .button__header
-    left: 150px
-    padding: 10px
+    left: 120px
     & h6 span 
       font-size: 22px
   .slider__dots 
-    left: 370px
-    bottom: 40px
+    left: 490px
+    bottom: 100px
+@media (max-width: 1150px)
+  .button__header
+    left: 140px
+    bottom: 75px
+    padding: 19px 20px  
+  .slider__dots 
+    left: 380px
+    bottom: 110px
     & img 
-      width: 50px 
-      height: 50px
+      height: 90px 
+      width: 90px
     & li
-      width: 100px
+      width: 128px
+      /* width: 130px */
 @media (max-width: 991px)
   .slick-slide img 
     height: 50vh
   .button__header
     left: 100px
+    bottom: 10px
     padding: 10px 20px
     & h6, span 
       font-size: 16px
