--- a/src/sass/blocks/_item.sass
+++ b/src/sass/blocks/_item.sass
@@ -273,7 +273,7 @@ img.myPrev
   height: 20px
   left: 30px
   top: -380px
-  z-index: 88 
+  z-index: 10 
   &:hover
     cursor: pointer
 img.myNext 
@@ -282,7 +282,7 @@ img.myNext
   top: -380px
   width: 12px 
   height: 20px
-  z-index: 9999
+  z-index: 10
   &:hover
     cursor: pointer
 /* стили для блока с похожими товарами  */
@@ -379,6 +379,9 @@ img.myNext
     & a 
       padding-left: 70px
     & li
+      padding-left: 0
+      min-height: 50px
+    
       text-align: center
       padding: 0
       transition: 0.2s
@@ -393,6 +396,11 @@ img.myNext
         padding-left: 30px
         color: #fff
 @media (max-width: 570px)
+  img.card__image
+    width: 99%
+  .item-card 
+    display: block
+    margin: auto
   .img.card__image
     width: 80%
   .catalog-dots li img
